--- a/Devq.Sellit.csproj
+++ b/Devq.Sellit.csproj
@@ -69,6 +69,16 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Site.css" />
+    <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Scripts\bootstrap.js" />
+    <Content Include="Scripts\bootstrap.min.js" />
+    <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\jquery-1.10.2.js" />
+    <Content Include="Scripts\jquery-1.10.2.min.js" />
+    <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Web.config" />
     <Content Include="Scripts\Web.config" />
     <Content Include="Styles\Web.config" />
@@ -89,9 +99,7 @@
       <Name>Orchard.Taxonomies</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="Views\Parts\PriceChoice.cshtml" />
     <Content Include="Placement.info" />
@@ -99,6 +107,16 @@
     <Content Include="Views\DefinitionTemplates\ExtraTermPartSettings.cshtml" />
     <Content Include="Views\Parts\LevelTermsWidget.cshtml" />
     <Content Include="Views\EditorTemplates\Parts\LevelTermsWidget.cshtml" />
+    <Content Include="Views\Product\Edit.cshtml" />
+    <Content Include="Views\Product\Index.cshtml" />
+    <Content Include="Views\Product\Create.cshtml" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="packages.config" />
+    <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\EditorTemplates\Fields\TaxonomyField-Product.cshtml" />
+    <Content Include="Views\EditorTemplates\Parts.Product.SiteSettings.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -108,24 +126,27 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="Controllers\ProductController.cs" />
+    <Compile Include="Controllers\TaxonomyController.cs" />
     <Compile Include="Drivers\LevelTermsWidgetDriver.cs" />
-    <Compile Include="Drivers\PriceChoicePartDriver.cs" />
+    <Compile Include="Drivers\ProductPartDriver.cs" />
     <Compile Include="Drivers\TermPartDriver.cs" />
     <Compile Include="Handlers\LevelTermsWidgetPartHandler.cs" />
-    <Compile Include="Handlers\PriceChoicePartHandler.cs" />
+    <Compile Include="Handlers\ProductSettingsPartHandler.cs" />
     <Compile Include="Migrations.cs" />
     <Compile Include="Models\LevelTermsWidgetPartRecord.cs" />
-    <Compile Include="Models\PriceChoicePart.cs" />
-    <Compile Include="Models\PriceChoicePartRecord.cs" />
-    <Compile Include="Models\PriceMode.cs" />
     <Compile Include="Models\ProductPart.cs" />
     <Compile Include="Models\ProductPartRecord.cs" />
     <Compile Include="Models\LevelTermsWidgetPart.cs" />
+    <Compile Include="Models\ProductSettingsPart.cs" />
+    <Compile Include="Models\ProductStatus.cs" />
     <Compile Include="Permissions.cs" />
+    <Compile Include="Routes.cs" />
     <Compile Include="Services\CategoryService.cs" />
     <Compile Include="Services\ICategoryService.cs" />
     <Compile Include="Settings\ExtraTermPartSettings.cs" />
     <Compile Include="Settings\ExtraTermPartSettingsEvents.cs" />
+    <Compile Include="EditorFieldShapeProvider.cs" />
     <Compile Include="ViewModels\LevelTermsWidgetViewEditModel.cs" />
   </ItemGroup>
   <PropertyGroup>
