--- a/Devq.Sellit.csproj
+++ b/Devq.Sellit.csproj
@@ -69,15 +69,14 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\bootstrap.css" />
-    <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
+    <Content Include="Scripts\jquery.countdown.js" />
+    <Content Include="Scripts\jquery.countdown.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Web.config" />
     <Content Include="Scripts\Web.config" />
@@ -111,7 +110,9 @@
       <Name>Orchard.Taxonomies</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Content\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Parts\PriceChoice.cshtml" />
     <Content Include="Placement.info" />
@@ -143,6 +144,12 @@
     <Content Include="Views\CategoryAdmin\Create.cshtml" />
     <Content Include="Views\CascadingCategory.cshtml" />
     <Content Include="Views\ProductAdmin\List.cshtml" />
+    <Content Include="Views\Parts\FeaturedProductsWidget.cshtml" />
+    <Content Include="Views\FeaturedProductsAdmin\Manage.cshtml" />
+    <Content Include="Views\FeaturedProducts\Index.cshtml" />
+    <Content Include="Views\EditorTemplates\Parts.FeaturedProducts.SiteSettings.cshtml" />
+    <Content Include="Views\Parts\FeaturedProduct.cshtml" />
+    <Content Include="Views\Template.FeaturedProductsWinner.Notification.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -154,27 +161,39 @@
     <Compile Include="AdminMenu.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Controllers\CategoryAdminController.cs" />
+    <Compile Include="Controllers\FeaturedProductsAdminController.cs" />
+    <Compile Include="Controllers\FeaturedProductsController.cs" />
     <Compile Include="Controllers\ProductAdminController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\TaxonomyController.cs" />
     <Compile Include="ControlWrapper.cs" />
     <Compile Include="Drivers\ExtendedProfilePartDriver.cs" />
+    <Compile Include="Drivers\FeaturedProductPartDriver.cs" />
+    <Compile Include="Drivers\FeaturedProductsWidgetDriver.cs" />
     <Compile Include="Drivers\LevelTermsWidgetDriver.cs" />
     <Compile Include="Drivers\ProductPartDriver.cs" />
     <Compile Include="Drivers\TermPartDriver.cs" />
     <Compile Include="Drivers\VehiclePartDriver.cs" />
     <Compile Include="Events\ProductTypeEditorEvents.cs" />
+    <Compile Include="FeaturedProductMigrations.cs" />
+    <Compile Include="FeaturedProductsAdminMenu.cs" />
+    <Compile Include="Handlers\FeaturedProductsTaskHandler.cs" />
     <Compile Include="Handlers\ExtendedProfilePartHandler.cs" />
+    <Compile Include="Handlers\FeaturedProductHandler.cs" />
     <Compile Include="Handlers\FeaturedProductsWidgetHandler.cs" />
     <Compile Include="Handlers\LevelTermsWidgetPartHandler.cs" />
     <Compile Include="Handlers\ProductExtensionPartsHandler.cs" />
     <Compile Include="Handlers\ProductPartHandler.cs" />
+    <Compile Include="Handlers\FeaturedProductsSettingsPartHandler.cs" />
     <Compile Include="Handlers\ProductSettingsPartHandler.cs" />
+    <Compile Include="Helpers\DateTimeJavascript.cs" />
     <Compile Include="Helpers\ProductMigrationExtensions.cs" />
     <Compile Include="Migrations.cs" />
     <Compile Include="Models\ClothPart.cs" />
     <Compile Include="Models\Enums\ProductState.cs" />
     <Compile Include="Models\ExtendedProfilePart.cs" />
+    <Compile Include="Models\FeaturedProductPart.cs" />
+    <Compile Include="Models\FeaturedProductsSettingsPart.cs" />
     <Compile Include="Models\FeaturedProductsWidget.cs" />
     <Compile Include="Models\LevelTermsWidgetPartRecord.cs" />
     <Compile Include="Models\ProductPart.cs" />
@@ -188,7 +207,9 @@
     <Compile Include="ProductPartFilter.cs" />
     <Compile Include="Routes.cs" />
     <Compile Include="Services\CategoryService.cs" />
+    <Compile Include="Services\FeaturedProductService.cs" />
     <Compile Include="Services\ICategoryService.cs" />
+    <Compile Include="Services\IFeaturedProductService.cs" />
     <Compile Include="Services\IProductService.cs" />
     <Compile Include="Services\ProductService.cs" />
     <Compile Include="Settings\ExtraTermPartSettings.cs" />
@@ -197,6 +218,7 @@
     <Compile Include="Settings\ProductPartSettings.cs" />
     <Compile Include="Settings\ProductPartSettingsEvents.cs" />
     <Compile Include="ViewModels\CreateProductTypeViewModel.cs" />
+    <Compile Include="ViewModels\FeaturedProductsIndexViewModel.cs" />
     <Compile Include="ViewModels\LevelTermsWidgetViewEditModel.cs" />
     <Compile Include="ViewModels\SelectCategoryViewModel.cs" />
     <Compile Include="ViewModels\CategoryAdminIndexViewModel.cs" />
